# challenge-arena

./: .gitignore  README.md  compose.yml  example.env
python/: alembic.ini  example.env  pyproject.toml
python/src/challenges_backend/: infrastructure.py
python/src/challenges_backend/main/: rest_api.py
python/src/challenges_backend/routers/: __init__.py  token.py
python/src/char_core/alembic/: env.py
python/src/char_core/alembic/versions/: 2b8951072aaf_minor_fixes.py  3e26d044e226_dev.py  495bdfb40d1d_dev.py  4f7cde89002a_fix_typo.py  6949b285497d_initial.py  6f64fa6bf1a3_nullable_user_description.py  866ba12cad61_initial.py  b3d1ca374ca8_fix.py  b783115aca12_uniq_constraints_for_members.py  f81b37895dec_members_count.py
python/src/char_core/main/: daemon.py
python/src/char_core/models/: challenge.py  space.py  user.py
python/src/char_core/tests/: test_challenge.py
python/src/char_rest_api/: infrastructure.py
python/src/char_rest_api/admin/: __init__.py  views.py
python/src/char_rest_api/dtos/: challenge.py  space.py  user.py
python/src/char_rest_api/main/: rest_api.py
python/src/char_rest_api/routers/: __init__.py  auth.py  challenge.py  challenges.py  space.py  spaces.py  token.py
